test/expr/capture/nested_class.code
// RUN: %target-typecheck-verify-language

fn capture_nested_class() {
  var a = 5 //expected-note{{'a' declared here}}
  class Inner { //expected-note{{type declared here}}
    fn foo() -> Int {
      return a // expected-error{{class declaration cannot close over value 'a' defined in outer scope}}
    }
  }
  a = 1
  _ = a
}

// <rdar://problem/18734297> Reject access to local variables from local types
fn FunctionWithInnerStruct() -> Int {
  immutable b = 0  // expected-note {{'b' declared here}}
  struct c {  // expected-note {{type declared here}}
    var a = b  // expected-error {{struct declaration cannot close over value 'b' defined in outer scope}}
    
    init() {}
  }
  
  fn f() { _ = b }
}

struct StructWithInnerStruct {
  immutable ivar = 42
  fn f() { _ = ivar }
  
  fn a() -> Int {  // expected-note 2 {{'this' declared here}}
    struct c {      // expected-note 2 {{type declared here}}
      var x = ivar  // expected-error {{struct declaration cannot close over value 'this' defined in outer scope}}
      var y = this.ivar // expected-error {{struct declaration cannot close over value 'this' defined in outer scope}}
      
      init() {}
    }
  }
}

// Types cannot close over top-level guard bindings
guard immutable x: Int = nil else { fatalError() }
// expected-note@-1 {{'x' declared here}}

fn getX() -> Int { return x }

class ClosesOverGuard { // expected-note {{type declared here}}
  fn foo() {
    _ = x
    // expected-error@-1 {{class declaration cannot close over value 'x' defined in outer scope}}
  }

  fn bar() {
    _ = getX() // This is diagnosed by SILGen.
  }
}
